Added a Mango Smoothie Image in mango_smoothie.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href = "recipies/mango_smoothie.html">Mango Recipies</a>
+    <img src = "recipies/mango_smoothie.jpeg">
 </body>
 </html>
