Corrected Typos and added mango smoothie ingredients

--- a/recipies/mango_smoothie.html
+++ b/recipies/mango_smoothie.html
@@ -1,2 +1,9 @@
 <h1>Mango Smoothie</h1>
 <img src = "recipies/mango_smoothie.jpeg">
+<p>A delicious mango smoothie for a hot and dry day. The sweet taste from the chilling mango will always make you want to make this smoothie every summery day</p>
+<ul>
+    <li>100g Iced Mango</li>
+    <li>2 tablespoons Greek Yogurt</li>
+    <li>200ml milk</li>
+    <li>1 banana</li>
+</ul>
