Corrected Typos and added mango smoothie steps

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href = "recipies/mango_smoothie.html">Mango Recipies</a>
-    <img src = "recipies/mango_smoothie.jpeg">
+    <a href = "recipies/mango_smoothie.html">Mango Smoothie</a>
+    
 </body>
 </html>
