--- a/recipies/mango_smoothie.html
+++ b/recipies/mango_smoothie.html
@@ -1,12 +1,14 @@
 <h1>Mango Smoothie</h1>
 <img src = "mango_smoothie.jpeg">
 <p>A delicious mango smoothie for a hot and dry day. The sweet taste from the chilling mango will always make you want to make this smoothie every summery day</p>
+<h2>Ingredients</h2>
 <ul>
     <li>100g Frozen Mango</li>
     <li>2 tablespoons Greek Yogurt</li>
     <li>200ml milk</li>
     <li>1 banana</li>
 </ul>
+<h2>Steps</h2>
 <ol>
     <li>Cut the banana in half and throw into blender</li>
     <li>Put in 2 tablespoons of Greek Yogurt into blender</li>
