--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href = "recipies/mango_smoothie.html">Mango Smoothie</a>
+    <a href = "recipies/Halushki.html">Halushki</a>
     
 </body>
 </html>
