--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href = "recipies/mango_smoothie.html">Mango Smoothie</a>
-    <a href = "recipies/Halushki.html">Halushki</a>
+    <ul>
+        <li><a href = "recipies/mango_smoothie.html">Mango Smoothie</a></li>
+        <li><a href = "recipies/Halushki.html">Halushki</a></li>
+    </ul>
+   
     
 </body>
 </html>
