Added steps to yakisoba_chicken.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href = "recipies/mango_smoothie.html">Mango Smoothie</a></li>
         <li><a href = "recipies/Halushki.html">Halushki</a></li>
+        <li><a href = "recipies/yakisoba_chicken.html">Yakisoba Chicken</li>
     </ul>
    
     
