--- a/recipies/yakisoba_chicken.html
+++ b/recipies/yakisoba_chicken.html
@@ -1,5 +1,6 @@
 <h1>Yakisoba Chicken</h1>
 <h2>Japanese buckwheat flour noodles with chicken at their best! Noodles can be found in an Asian foods market.</h2>
+<h2>Ingredients</h2>
 <ul>
     <li>½ teaspoon sesame oil</li>
 
@@ -21,3 +22,8 @@
         
         <li>8 ounces soba noodles, cooked and drained</li>
 </ul>
+<h2>Steps</h2>
+<ol>
+    <li>In a large skillet combine sesame oil, canola oil and chili paste; stir-fry 30 seconds. Add garlic and stir fry an additional 30 seconds. Add chicken and 1/4 cup of the soy sauce and stir fry until chicken is no longer pink, about 5 minutes. Remove mixture from pan, set aside, and keep warm.</li>
+    <li>In the emptied pan combine the onion, cabbage, and carrots. Stir-fry until cabbage begins to wilt, 2 to 3 minutes. Stir in the remaining soy sauce, cooked noodles, and the chicken mixture to pan and mix to blend. Serve and enjoy!</li>
+</ol>
