--- a/recipies/yakisoba_chicken.html
+++ b/recipies/yakisoba_chicken.html
@@ -1,5 +1,5 @@
 <h1>Yakisoba Chicken</h1>
-<img src = "yakisoba_chicken.html">
+<img src = "yakisoba_chicken.jpeg">
 <h2>Japanese buckwheat flour noodles with chicken at their best! Noodles can be found in an Asian foods market.</h2>
 <h2>Ingredients</h2>
 <ul>
